# function_timer

./: .travis.yml  CMakeLists.txt  README.md
include/: function_timer.h
src/: main.cpp  test.c  test.cpp
